## 2018-7-13
• Updated menu links

## 2018-7-12
• Added reports section 
• Updated dashboard and view user access.html

## 2017-3-22
• Changed breadcrumbs to tabs on dashboard
• Changed Home to Dashboard
• Updated stylesheets
• Added department tab
• Removed pages that are no longer needed
• Added fictitious info

## 2017-3-17
• Updated css to add styling to filter and submit buttons

## 2017-3-7
• Updated branch map to reflect latest changes
• Bar chart has been removed and replaced with number of visits

## 2017-2-13
• Added filters for date search
• Added new navigation menus on submissions.html
• Updated dashboard